compiler/lyra/src/test/resources/semantic_errors/ImplementsClass.ly
class NotAnInterface { }

class A implements NotAnInterface { }

class Application {
    def main { }
}